--- a/package.json
+++ b/package.json
@@ -3,11 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.2",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-promise-middleware": "^6.1.2"
+  },
+  "devDependencies": {
     "@testing-library/jest-dom": "^5.3.0",
     "@testing-library/react": "^10.0.1",
     "@testing-library/react-hooks": "^3.2.1",
     "@testing-library/user-event": "^10.0.0",
-    "axios": "^0.19.2",
     "axios-mock-adapter": "^1.18.1",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.1",
@@ -17,15 +25,9 @@
     "jest-environment-jsdom-sixteen": "^1.0.3",
     "lint-staged": "^10.0.10",
     "prettier": "^2.0.2",
-    "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "react-test-renderer": "^16.13.1",
-    "redux": "^4.0.5",
     "redux-mock-store": "^1.5.4",
-    "redux-promise-middleware": "^6.1.2",
     "stylelint": "13.2.1",
     "stylelint-config-standard": "20.0.0",
     "stylelint-order": "4.0.0"
