--- a/package.json
+++ b/package.json
@@ -1,17 +1,29 @@
 {
   "name": "cra-template-npm-library",
   "version": "0.1.0",
-  "private": true,
+  "main": "lib/index.cjs.js",
+  "module": "lib/index.esm.js",
+  "browser": "lib/index.js",
+  "style": "lib/default.css",
+  "files": [
+    "lib",
+    "types"
+  ],
   "dependencies": {
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-react": "^7.9.4",
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
     "@testing-library/jest-dom": "^5.3.0",
     "@testing-library/react": "^10.0.1",
     "@testing-library/react-hooks": "^3.2.1",
     "@testing-library/user-event": "^10.0.0",
+    "autoprefixer": "^9.7.5",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-fp": "^2.3.0",
@@ -19,10 +31,19 @@
     "husky": "^4.2.3",
     "jest-environment-jsdom-sixteen": "^1.0.3",
     "lint-staged": "^10.0.10",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^2.0.2",
     "react-scripts": "3.4.1",
     "react-test-renderer": "^16.13.1",
     "redux-mock-store": "^1.5.4",
+    "rollup": "^2.3.2",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-filesize": "^6.2.1",
+    "rollup-plugin-includepaths": "^0.2.3",
+    "rollup-plugin-peer-deps-external": "^2.2.2",
+    "rollup-plugin-postcss": "^2.5.0",
+    "rollup-plugin-stylelint": "^1.0.0",
+    "rollup-plugin-terser": "^5.3.0",
     "stylelint": "13.2.1",
     "stylelint-config-standard": "20.0.0",
     "stylelint-order": "4.0.0"
@@ -30,6 +51,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:lib": "npx rollup -c",
     "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "eject": "react-scripts eject",
     "fix:js": "npx eslint --fix ./src/",
