--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "types"
   ],
   "dependencies": {
+    "@craco/craco": "^5.6.4",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
@@ -49,10 +50,10 @@
     "stylelint-order": "4.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "craco start",
+    "build": "craco build",
     "build:lib": "npx rollup -c",
-    "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
+    "test": "craco test --env=jest-environment-jsdom-sixteen",
     "eject": "react-scripts eject",
     "fix:js": "npx eslint --fix ./src/",
     "lint:js": "npx eslint ./src/",
