--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "husky": "^4.2.3",
     "jest-environment-jsdom-sixteen": "^1.0.3",
     "lint-staged": "^10.0.10",
+    "npm-run-all": "^4.1.5",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.0.2",
     "react-scripts": "3.4.1",
@@ -50,9 +51,11 @@
     "stylelint-order": "4.0.0"
   },
   "scripts": {
-    "start": "craco start",
+    "start:demo": "craco start",
+    "start": "npm-run-all -p start:demo watch:lib",
     "build": "craco build",
     "build:lib": "npx rollup -c",
+    "watch:lib": "npx rollup -c rollup.config.development.js -w",
     "test": "craco test --env=jest-environment-jsdom-sixteen",
     "eject": "react-scripts eject",
     "fix:js": "npx eslint --fix ./src/",
