--- a/.eslintrc
+++ b/.eslintrc
@@ -59,7 +59,7 @@
   },
   "overrides": [
     {
-      "files": [ "./*.js"],
+      "files": [ "./*.js", "setupTests.js"],
       "rules": {
         "import/no-extraneous-dependencies": ["error", {"devDependencies": true, "optionalDependencies": false, "peerDependencies": false}],
         "global-require": 0
