--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   "devDependencies": {
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
-    "@craco/craco": "^5.6.4",
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
     "@testing-library/jest-dom": "^5.3.0",
@@ -53,12 +52,10 @@
     "stylelint-order": "4.0.0"
   },
   "scripts": {
-    "start:app": "react-scripts start",
-    "start": "npm-run-all -p start:app watch:lib",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "build:lib": "npx rollup -c",
-    "watch:lib": "npx rollup -c rollup.config.development.js -w",
-    "test": "craco test --env=jest-environment-jsdom-sixteen",
+    "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "eject": "react-scripts eject",
     "fix:js": "npx eslint --fix ./src/",
     "lint:js": "npx eslint ./src/",
