--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
     "@rollup/plugin-commonjs": "^11.0.2",
@@ -47,6 +49,7 @@
     "@testing-library/react-hooks": "^3.2.1",
     "@testing-library/user-event": "^10.0.0",
     "autoprefixer": "^9.7.5",
+    "babel-preset-react-app": "^9.1.2",
     "docz": "^2.3.1",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.1",
