--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   },
   "devDependencies": {
     "@babel/cli": "7.19.3",
-    "@babel/core": "7.20.7",
+    "@babel/core": "7.19.3",
     "@babel/eslint-parser": "7.19.1",
     "@babel/preset-env": "7.20.2",
     "@babel/preset-react": "7.18.6",
@@ -78,6 +78,7 @@
     "husky": "8.0.2",
     "is-ci": "3.0.1",
     "lint-staged": "13.0.4",
+    "node-sass": "7.0.3",
     "npm-run-all": "4.1.5",
     "postcss-preset-env": "7.8.3",
     "prettier": "2.8.1",
