--- a/package.json
+++ b/package.json
@@ -79,6 +79,8 @@
     "is-ci": "3.0.1",
     "lint-staged": "13.0.4",
     "npm-run-all": "4.1.5",
+    "postcss-cli": "10.0.0",
+    "postcss-nested": "6.0.0",
     "postcss-preset-env": "7.8.3",
     "prettier": "2.8.1",
     "react-scripts": "5.0.1",
@@ -97,15 +99,21 @@
     "stylelint-order": "5.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build:style": "postcss src/**/*.pcss --dir src --base src --ext css",
+    "watch:style": "yarn build:style -w",
+    "start": "npm-run-all -p watch:style start:js",
+    "start:js": "react-scripts start",
+    "prebuild": "yarn build:style",
+    "build:js": "react-scripts build",
+    "build": "npm-run-all build:style build:js",
     "build:lib": "npx rollup -c",
     "build:lib:local": "REACT_APP_PKG_MAIN=lib/index.cjs.js REACT_APP_PKG_MODULE=lib/index.esm.js REACT_APP_PKG_STYLE=lib/default.css yarn build:lib",
+    "pretest": "yarn build:style",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "fix:js": "npx eslint --fix ./src/",
     "lint:js": "npx eslint ./src/",
-    "lint:style": "npx stylelint ./src/**/*.css",
+    "lint:style": "npx stylelint ./src/**/*.pcss",
     "fix:style": "yarn lint:style --fix",
     "clean:files": "node ./cleanFiles.js",
     "copy:files": "node ./copyFiles.js",
