--- a/.github/workflows/pull-request-jobs.yml
+++ b/.github/workflows/pull-request-jobs.yml
@@ -4,8 +4,6 @@
 name: Node.js CI
 
 on:
-  #  push:
-  #    branches: [ master ]
   pull_request:
     branches: [ master ]
 
@@ -31,6 +29,7 @@ jobs:
       - name: Run yarn tasks
         run: |
           yarn install --frozen-lockfile
+          yarn build:style
           yarn lint:js --quiet
           yarn lint:style --quiet
           yarn test --silent
