--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-fp": "2.3.0",
     "eslint-plugin-import": "2.22.1",
+    "gatsby-plugin-less": "3.1.1",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react": "7.21.5",
@@ -69,6 +70,8 @@
     "husky": "4.3.0",
     "jest-environment-jsdom-sixteen": "1.0.3",
     "lint-staged": "10.5.1",
+    "less": "3.11.1",
+    "less-watch-compiler": "1.14.6",
     "npm-run-all": "4.1.5",
     "postcss-preset-env": "6.7.0",
     "prettier": "2.1.2",
@@ -89,8 +92,12 @@
     "stylelint-order": "4.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build:style": "yarn watch:style --run-once",
+    "watch:style": "less-watch-compiler src src",
+    "start": "npm-run-all -p watch:style start:js",
+    "start:js": "react-scripts start",
+    "build:js": "react-scripts build",
+    "build": "npm-run-all build:style build:js",
     "build:lib": "npx rollup -c",
     "build:lib:local": "REACT_APP_PKG_MAIN=lib/index.cjs.js REACT_APP_PKG_MODULE=lib/index.esm.js REACT_APP_PKG_STYLE=lib/default.css yarn build:lib",
     "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
