--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.9.0",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
@@ -52,10 +54,15 @@
     "@testing-library/user-event": "^10.0.0",
     "autoprefixer": "^9.7.5",
     "docz": "^2.3.1",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-fp": "^2.3.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^3.0.0",
     "husky": "^4.2.3",
     "jest-environment-jsdom-sixteen": "^1.0.3",
     "lint-staged": "^10.0.10",
