--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@babel/core": "7.9.0",
     "@babel/preset-env": "7.9.5",
     "@babel/preset-react": "7.9.4",
-    "@rollup/plugin-babel": "^5.0.0",
+    "@rollup/plugin-babel": "5.0.0",
     "@rollup/plugin-commonjs": "11.1.0",
     "@rollup/plugin-node-resolve": "7.1.3",
     "@testing-library/jest-dom": "5.5.0",
