--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint": "7.12.1",
     "eslint-config-airbnb": "18.2.0",
     "eslint-config-prettier": "6.12.0",
+    "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-fp": "2.3.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsx-a11y": "6.3.1",
