--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
   },
   "devDependencies": {
     "@babel/cli": "7.12.1",
-    "@babel/core": "7.12.3",
+    "@babel/core": "^7.12.3",
+    "@babel/eslint-parser": "^7.12.1",
     "@babel/preset-env": "7.12.1",
     "@babel/preset-react": "^7.12.1",
     "@babel/runtime": "^7.12.1",
@@ -56,7 +57,7 @@
     "@testing-library/user-event": "12.1.10",
     "autoprefixer": "9.8.6",
     "docz": "2.3.1",
-    "eslint": "7.12.1",
+    "eslint": "^7.12.1",
     "eslint-config-airbnb": "18.2.0",
     "eslint-config-prettier": "6.15.0",
     "eslint-config-react-app": "^6.0.0",
