--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
   "devDependencies": {
     "@babel/cli": "7.12.1",
     "@babel/core": "^7.12.3",
-    "@babel/eslint-parser": "^7.12.1",
     "@babel/preset-env": "7.12.1",
     "@babel/preset-react": "^7.12.1",
     "@babel/runtime": "^7.12.1",
@@ -56,6 +55,7 @@
     "@testing-library/react-hooks": "3.4.2",
     "@testing-library/user-event": "12.1.10",
     "autoprefixer": "9.8.6",
+    "babel-eslint": "^10.1.0",
     "docz": "2.3.1",
     "eslint": "^7.12.1",
     "eslint-config-airbnb": "18.2.0",
