--- a/package.json
+++ b/package.json
@@ -68,7 +68,6 @@
     "eslint-plugin-react": "7.25.1",
     "eslint-plugin-react-hooks": "4.2.0",
     "husky": "7.0.2",
-    "jest-environment-jsdom-sixteen": "2.0.0",
     "lint-staged": "11.1.2",
     "npm-run-all": "4.1.5",
     "postcss-preset-env": "6.7.0",
@@ -94,7 +93,7 @@
     "build": "react-scripts build",
     "build:lib": "npx rollup -c",
     "build:lib:local": "REACT_APP_PKG_MAIN=lib/index.cjs.js REACT_APP_PKG_MODULE=lib/index.esm.js REACT_APP_PKG_STYLE=lib/default.css yarn build:lib",
-    "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "fix:js": "npx eslint --fix ./src/",
     "lint:js": "npx eslint ./src/",
@@ -105,7 +104,8 @@
     "write:template": "node ./writeTemplateConfig.js",
     "prepublishOnly": "yarn clean:files && yarn copy:files && yarn write:template",
     "start:docs": "docz dev",
-    "build:docs": "docz build"
+    "build:docs": "docz build",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": "react-app"
