--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "prepublishOnly": "yarn clean:files && yarn copy:files && yarn write:template",
     "start:docs": "docz dev",
     "build:docs": "docz build",
-    "prepare": "husky install"
+    "prepare": "node ./prepare.js && husky install"
   },
   "eslintConfig": {
     "extends": "react-app"
