--- a/package.json
+++ b/package.json
@@ -50,13 +50,18 @@
     "@rollup/plugin-babel": "5.3.0",
     "@rollup/plugin-commonjs": "20.0.0",
     "@rollup/plugin-node-resolve": "13.0.4",
+    "@storybook/addon-actions": "^6.3.8",
+    "@storybook/addon-essentials": "^6.3.8",
+    "@storybook/addon-links": "^6.3.8",
+    "@storybook/node-logger": "^6.3.8",
+    "@storybook/preset-create-react-app": "^3.2.0",
+    "@storybook/react": "^6.3.8",
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "12.0.0",
     "@testing-library/react-hooks": "7.0.2",
     "@testing-library/user-event": "13.2.1",
     "autoprefixer": "9.8.6",
     "babel-eslint": "^10.1.0",
-    "docz": "2.3.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.3.0",
@@ -73,7 +78,6 @@
     "postcss-preset-env": "6.7.0",
     "prettier": "2.3.2",
     "react-scripts": "4.0.3",
-    "react-test-renderer": "16.14.0",
     "recursive-copy": "2.0.13",
     "rimraf": "3.0.2",
     "rollup": "2.56.3",
@@ -103,12 +107,22 @@
     "copy:files": "node ./copyFiles.js",
     "write:template": "node ./writeTemplateConfig.js",
     "prepublishOnly": "yarn clean:files && yarn copy:files && yarn write:template",
-    "start:docs": "docz dev",
-    "build:docs": "docz build",
-    "prepare": "husky installl"
+    "start:docs": "start-storybook -p 6006 -s public",
+    "build:docs": "build-storybook -s public",
+    "prepare": "husky install"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
+    ]
   },
   "browserslist": {
     "production": [
