--- a/package.json
+++ b/package.json
@@ -38,34 +38,34 @@
   },
   "dependencies": {
     "prop-types": "^15.7.2",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/cli": "7.15.4",
-    "@babel/core": "^7.15.5",
+    "@babel/core": "7.15.5",
     "@babel/preset-env": "7.15.0",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/runtime": "^7.15.3",
+    "@babel/preset-react": "7.14.5",
+    "@babel/runtime": "7.15.3",
     "@rollup/plugin-babel": "5.3.0",
     "@rollup/plugin-commonjs": "20.0.0",
     "@rollup/plugin-node-resolve": "13.0.4",
-    "@storybook/addon-actions": "^6.3.8",
-    "@storybook/addon-essentials": "^6.3.8",
-    "@storybook/addon-links": "^6.3.8",
-    "@storybook/node-logger": "^6.3.8",
-    "@storybook/preset-create-react-app": "^3.2.0",
-    "@storybook/react": "^6.3.8",
+    "@storybook/addon-actions": "6.3.8",
+    "@storybook/addon-essentials": "6.3.8",
+    "@storybook/addon-links": "6.3.8",
+    "@storybook/node-logger": "6.3.8",
+    "@storybook/preset-create-react-app": "3.2.0",
+    "@storybook/react": "6.3.8",
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "12.0.0",
     "@testing-library/react-hooks": "7.0.2",
     "@testing-library/user-event": "13.2.1",
     "autoprefixer": "9.8.6",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.32.0",
+    "babel-eslint": "10.1.0",
+    "eslint": "7.32.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.3.0",
-    "eslint-config-react-app": "^6.0.0",
+    "eslint-config-react-app": "6.0.0",
     "eslint-plugin-fp": "2.3.0",
     "eslint-plugin-import": "2.24.2",
     "eslint-plugin-jsx-a11y": "6.4.1",
