--- a/.github/workflows/merge-jobs.yml
+++ b/.github/workflows/merge-jobs.yml
@@ -4,11 +4,11 @@
 name: Node.js CI
 
 on:
-  pull_request:
+  push:
     branches: [ master ]
 
 jobs:
-  lint-test:
+  build-publish:
 
     runs-on: ubuntu-latest
 
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: c-hive/gha-yarn-cache@v1
       - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.9.0
+        uses: styfle/cancel-workflow-action@0.9.1
         with:
           access_token: ${{ github.token }}
       - name: Read .nvmrc
@@ -29,8 +29,7 @@ jobs:
       - name: Run yarn tasks
         run: |
           yarn --silent
-          yarn lint:js --quiet
-          yarn lint:style --quiet
-          yarn test --silent
-          yarn start --smoke-test
-          yarn build:lib:local --silent
+      - name: Publish NPM package
+        uses: JS-DevTools/npm-publish@v1
+        with:
+          token: ${{ secrets.NPM_TOKEN }}
