--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,7 @@
     // Throw warning instead of error. Feel free to choose your favorite option https://eslint.org/docs/rules/arrow-body-style
     "arrow-body-style": ["warn", "as-needed"],
     // Make prettier code formatting suggestions more verbose.
-    "prettier/prettier": ["warn"],
+    "prettier/prettier": 0,
     // Throw warning when <a href="#"> or <a href="javascript:void(0)"> are used. Use <button> instead.
     "jsx-a11y/anchor-is-valid": ["warn", {"aspects": ["invalidHref"]}],
     // Allow using (props) => <Component /> and ({propName}) => <Component /> syntax.
