--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@testing-library/react-hooks": "7.0.2",
     "@testing-library/user-event": "13.2.1",
     "autoprefixer": "9.8.6",
+    "babel-eslint": "10.1.0",
     "eslint": "7.32.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.3.0",
