--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@babel/cli": "7.15.4",
     "@babel/core": "7.15.5",
+    "@babel/eslint-parser": "7.15.4",
     "@babel/preset-env": "7.15.0",
     "@babel/preset-react": "7.14.5",
     "@babel/runtime": "7.15.3",
@@ -61,7 +62,6 @@
     "@testing-library/react-hooks": "7.0.2",
     "@testing-library/user-event": "13.2.1",
     "autoprefixer": "9.8.6",
-    "babel-eslint": "10.1.0",
     "eslint": "7.32.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.3.0",
