--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@testing-library/react-hooks": "7.0.2",
     "@testing-library/user-event": "13.2.1",
     "autoprefixer": "9.8.6",
+    "babel-eslint": "10.1.0",
     "eslint": "7.32.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.3.0",
@@ -70,7 +71,7 @@
     "eslint-plugin-fp": "2.3.0",
     "eslint-plugin-import": "2.24.2",
     "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-prettier": "3.4.1",
     "eslint-plugin-react": "7.25.1",
     "eslint-plugin-react-hooks": "4.2.0",
     "husky": "7.0.2",
