--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "url": "https://github.com/morewings/cra-template-npm-library",
     "directory": "/"
   },
-  "homepage": "https://cra-template-npm-library.netlify.com/",
+  "homepage": "https://morewings.github.io/cra-template-npm-library/",
   "bugs": {
     "url": "https://github.com/morewings/cra-template-npm-library/issues"
   },
@@ -79,7 +79,7 @@
     "husky": "8.0.1",
     "lint-staged": "13.0.3",
     "npm-run-all": "4.1.5",
-    "postcss-preset-env": "6.7.1",
+    "postcss-preset-env": "7.8.2",
     "prettier": "2.5.1",
     "react-scripts": "5.0.1",
     "recursive-copy": "2.0.14",
@@ -89,7 +89,7 @@
     "rollup-plugin-filesize": "9.1.2",
     "rollup-plugin-includepaths": "0.2.4",
     "rollup-plugin-peer-deps-external": "2.2.4",
-    "rollup-plugin-postcss": "3.1.8",
+    "rollup-plugin-postcss": "4.0.2",
     "rollup-plugin-terser": "7.0.2",
     "stylelint": "14.13.0",
     "stylelint-config-prettier": "^9.0.3",
