--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "eslint-plugin-react": "7.31.8",
     "eslint-plugin-react-hooks": "4.6.0",
     "husky": "8.0.1",
+    "is-ci": "^3.0.1",
     "lint-staged": "13.0.3",
     "npm-run-all": "4.1.5",
     "postcss-preset-env": "7.8.2",
@@ -113,7 +114,7 @@
     "prepublishOnly": "yarn clean:files && yarn copy:files && yarn write:template",
     "start:docs": "start-storybook -p 6006",
     "build:docs": "build-storybook",
-    "prepare": "husky install"
+    "prepare": "is-ci || husky install"
   },
   "eslintConfig": {
     "extends": "react-app"
