--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "@storybook/addon-actions": "6.5.12",
     "@storybook/addon-essentials": "6.5.12",
     "@storybook/addon-links": "6.5.12",
-    "@storybook/builder-webpack5": "^6.5.12",
-    "@storybook/manager-webpack5": "^6.5.12",
+    "@storybook/builder-webpack5": "6.5.12",
+    "@storybook/manager-webpack5": "6.5.12",
     "@storybook/node-logger": "6.5.12",
     "@storybook/preset-create-react-app": "4.1.2",
     "@storybook/react": "6.5.12",
@@ -69,7 +69,7 @@
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "8.5.0",
     "eslint-config-react-app": "6.0.0",
-    "eslint-plugin-flowtype": "^5.10.0",
+    "eslint-plugin-flowtype": "5.10.0",
     "eslint-plugin-fp": "2.3.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
@@ -77,7 +77,7 @@
     "eslint-plugin-react": "7.31.8",
     "eslint-plugin-react-hooks": "4.6.0",
     "husky": "8.0.1",
-    "is-ci": "^3.0.1",
+    "is-ci": "3.0.1",
     "lint-staged": "13.0.3",
     "npm-run-all": "4.1.5",
     "postcss-preset-env": "7.8.2",
@@ -93,7 +93,7 @@
     "rollup-plugin-postcss": "4.0.2",
     "rollup-plugin-terser": "7.0.2",
     "stylelint": "14.13.0",
-    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-prettier": "9.0.3",
     "stylelint-config-standard": "28.0.0",
     "stylelint-order": "5.0.0"
   },
