--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "url": "https://github.com/morewings/cra-template-npm-library",
     "directory": "/"
   },
-  "homepage": "https://cra-template-npm-library.netlify.com/",
+  "homepage": "https://morewings.github.io/cra-template-npm-library/",
   "bugs": {
     "url": "https://github.com/morewings/cra-template-npm-library/issues"
   },
@@ -54,8 +54,8 @@
     "@storybook/addon-actions": "6.5.12",
     "@storybook/addon-essentials": "6.5.12",
     "@storybook/addon-links": "6.5.12",
-    "@storybook/builder-webpack5": "^6.5.12",
-    "@storybook/manager-webpack5": "^6.5.12",
+    "@storybook/builder-webpack5": "6.5.12",
+    "@storybook/manager-webpack5": "6.5.12",
     "@storybook/node-logger": "6.5.12",
     "@storybook/preset-create-react-app": "4.1.2",
     "@storybook/react": "6.5.12",
@@ -69,7 +69,7 @@
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "8.5.0",
     "eslint-config-react-app": "6.0.0",
-    "eslint-plugin-flowtype": "^5.10.0",
+    "eslint-plugin-flowtype": "5.10.0",
     "eslint-plugin-fp": "2.3.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
@@ -77,9 +77,10 @@
     "eslint-plugin-react": "7.31.8",
     "eslint-plugin-react-hooks": "4.6.0",
     "husky": "8.0.1",
+    "is-ci": "3.0.1",
     "lint-staged": "13.0.3",
     "npm-run-all": "4.1.5",
-    "postcss-preset-env": "6.7.1",
+    "postcss-preset-env": "7.8.2",
     "prettier": "2.5.1",
     "react-scripts": "5.0.1",
     "recursive-copy": "2.0.14",
@@ -89,10 +90,10 @@
     "rollup-plugin-filesize": "9.1.2",
     "rollup-plugin-includepaths": "0.2.4",
     "rollup-plugin-peer-deps-external": "2.2.4",
-    "rollup-plugin-postcss": "3.1.8",
+    "rollup-plugin-postcss": "4.0.2",
     "rollup-plugin-terser": "7.0.2",
     "stylelint": "14.13.0",
-    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-prettier": "9.0.3",
     "stylelint-config-standard": "28.0.0",
     "stylelint-order": "5.0.0"
   },
@@ -113,7 +114,7 @@
     "prepublishOnly": "yarn clean:files && yarn copy:files && yarn write:template",
     "start:docs": "start-storybook -p 6006",
     "build:docs": "build-storybook",
-    "prepare": "husky install"
+    "prepare": "is-ci || husky install"
   },
   "eslintConfig": {
     "extends": "react-app"
