--- a/.github/workflows/pull-request-jobs.yml
+++ b/.github/workflows/pull-request-jobs.yml
@@ -33,5 +33,5 @@ jobs:
           yarn lint:style --quiet
           yarn test --silent
           yarn start --smoke-test
-          yarn start:docs --smoke-test
+          yarn start:docs --smoke-test --quiet
           yarn build:lib:local --silent
