--- a/package.json
+++ b/package.json
@@ -99,18 +99,18 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build:lib": "npx rollup -c",
-    "build:lib:local": "REACT_APP_PKG_MAIN=lib/index.cjs.js REACT_APP_PKG_MODULE=lib/index.esm.js REACT_APP_PKG_STYLE=lib/default.css yarn build:lib",
+    "build:lib": "rollup -c",
+    "build:lib:local": "REACT_APP_PKG_MAIN=lib/index.cjs.js REACT_APP_PKG_MODULE=lib/index.esm.js REACT_APP_PKG_STYLE=lib/default.css run-s build:lib",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "fix:js": "npx eslint --fix ./src/",
-    "lint:js": "npx eslint ./src/",
-    "lint:style": "npx stylelint ./src/**/*.css",
-    "fix:style": "yarn lint:style --fix",
+    "lint:js": "eslint ./src/",
+    "fix:js": "run-s 'lint:js --fix'",
+    "lint:style": "stylelint ./src/**/*.css",
+    "fix:style": "run-s 'lint:style --fix'",
     "clean:files": "node ./cleanFiles.js",
     "copy:files": "node ./copyFiles.js",
     "write:template": "node ./writeTemplateConfig.js",
-    "prepublishOnly": "yarn clean:files && yarn copy:files && yarn write:template",
+    "prepublishOnly": "run-s clean:files copy:files write:template",
     "start:docs": "start-storybook -p 6006",
     "build:docs": "build-storybook",
     "prepare": "is-ci || husky install"
