--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@storybook/node-logger": "6.5.16",
     "@storybook/preset-create-react-app": "4.1.2",
     "@storybook/react": "6.5.16",
+    "@swc/core": "^1.3.46",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
@@ -90,6 +91,7 @@
     "rollup-plugin-includepaths": "0.2.4",
     "rollup-plugin-peer-deps-external": "2.2.4",
     "rollup-plugin-postcss": "4.0.2",
+    "rollup-plugin-swc3": "^0.8.1",
     "rollup-plugin-terser": "7.0.2",
     "stylelint": "14.16.1",
     "stylelint-config-prettier": "9.0.5",
