--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,6 +1,6 @@
 {
-  "*.js": [
-    "eslint --fix --quiet"
+  "*.{js,ts,tsx}": [
+    "eslint --fix"
   ],
   "*.css": [
     "stylelint --fix --quiet"
