--- a/package.json
+++ b/package.json
@@ -62,19 +62,27 @@
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
+    "@types/jest": "27.0.1",
+    "@types/node": "16.7.13",
+    "@types/prop-types": "15.7.11",
+    "@types/react": "18.0.0",
+    "@types/react-dom": "18.0.0",
+    "@typescript-eslint/parser": "6.12.0",
     "autoprefixer": "9.8.8",
     "babel-eslint": "10.1.0",
     "eslint": "8.37.0",
     "eslint-config-airbnb": "19.0.4",
-    "eslint-config-prettier": "8.8.0",
+    "eslint-config-prettier": "8.10.0",
     "eslint-config-react-app": "7.0.1",
+    "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-flowtype": "8.0.2",
     "eslint-plugin-fp": "2.3.0",
-    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-import": "2.29.0",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-ssr-friendly": "1.2.0",
     "husky": "8.0.3",
     "is-ci": "3.0.1",
     "lint-staged": "13.2.0",
@@ -94,7 +102,8 @@
     "stylelint": "15.10.1",
     "stylelint-config-prettier": "9.0.5",
     "stylelint-config-standard": "29.0.0",
-    "stylelint-order": "6.0.3"
+    "stylelint-order": "6.0.3",
+    "typescript": "4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -105,6 +114,7 @@
     "eject": "react-scripts eject",
     "lint:js": "eslint ./src/",
     "fix:js": "run-s 'lint:js --fix'",
+    "lint:tsc": "tsc --pretty --noEmit",
     "lint:style": "stylelint ./src/**/*.css",
     "fix:style": "run-s 'lint:style --fix'",
     "clean:files": "node ./cleanFiles.js",
