--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-ssr-friendly": "1.2.0",
     "husky": "8.0.3",
+    "identity-obj-proxy": "^3.0.0",
     "is-ci": "3.0.1",
     "lint-staged": "13.2.0",
     "npm-run-all": "4.1.5",
@@ -99,9 +100,8 @@
     "rollup-plugin-peer-deps-external": "2.2.4",
     "rollup-plugin-postcss": "4.0.2",
     "rollup-plugin-terser": "7.0.2",
-    "stylelint": "15.10.1",
-    "stylelint-config-prettier": "9.0.5",
-    "stylelint-config-standard": "29.0.0",
+    "stylelint": "15.11.0",
+    "stylelint-config-standard": "34.0.0",
     "stylelint-order": "6.0.3",
     "typescript": "4.4.2"
   },
@@ -124,9 +124,6 @@
     "start:docs": "start-storybook -p 6006",
     "build:docs": "build-storybook",
     "prepare": "is-ci || husky install"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
