--- a/.github/workflows/pull-request-jobs.yml
+++ b/.github/workflows/pull-request-jobs.yml
@@ -38,5 +38,5 @@ jobs:
           pnpm run lint:style --quiet
           pnpm run test --silent
           pnpm run start --smoke-test
-          pnpm run start:docs --smoke-test --quiet
+#          pnpm run start:docs --smoke-test --quiet
 #          yarn build:lib:local --silent
