--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "url": "https://github.com/morewings/cra-template-npm-library/issues"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@babel/cli": "7.22.5",
@@ -63,6 +62,7 @@
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
     "@types/jest": "27.0.1",
+    "@types/lodash": "^4.14.202",
     "@types/node": "16.7.13",
     "@types/react": "18.0.0",
     "@types/react-dom": "18.0.0",
@@ -90,6 +90,8 @@
     "npm-run-all": "4.1.5",
     "postcss-preset-env": "8.3.0",
     "prettier": "2.8.7",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
     "recursive-copy": "2.0.14",
     "rimraf": "4.4.1",
@@ -106,10 +108,16 @@
     "stylelint-order": "6.0.3",
     "typescript": "4.8.4"
   },
+  "peerDependencies": {
+    "react": ">=18.2.0",
+    "react-dom": ">=18.2.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build:lib": "rollup -c",
+    "clean:lib": "rm -rf dist",
+    "compile:lib": "rollup -c",
+    "build:lib": "run-s clean:lib compile:lib",
     "build:lib:local": "REACT_APP_PKG_MAIN=lib/index.cjs.js REACT_APP_PKG_MODULE=lib/index.esm.js REACT_APP_PKG_STYLE=lib/default.css run-s build:lib",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
