clean up unused files and dependencies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,5 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -18,11 +12,16 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
+    "jsx": "react",
     "baseUrl": "src",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "target": "esnext",
+    "declaration": false,
+    "outDir": "./dist",
+    "lib": ["ES2020", "DOM"],
+    "importHelpers": false
   },
   "include": [
     "src",
