--- a/package.json
+++ b/package.json
@@ -40,17 +40,25 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "^11.1.5",
+    "@rollup/plugin-typescript": "11.1.5",
+    "@storybook/addon-essentials": "7.5.3",
+    "@storybook/addon-interactions": "7.5.3",
+    "@storybook/addon-links": "7.5.3",
+    "@storybook/blocks": "7.5.3",
+    "@storybook/preset-create-react-app": "7.5.3",
+    "@storybook/react": "7.5.3",
+    "@storybook/react-webpack5": "7.5.3",
+    "@storybook/testing-library": "0.2.2",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
     "@types/jest": "27.0.1",
-    "@types/lodash": "^4.14.202",
+    "@types/lodash": "4.14.202",
     "@types/node": "16.7.13",
     "@types/react": "18.0.0",
     "@types/react-dom": "18.0.0",
     "@typescript-eslint/parser": "6.12.0",
-    "@yelo/rollup-node-external": "^1.0.1",
+    "@yelo/rollup-node-external": "1.0.1",
     "autoprefixer": "9.8.8",
     "eslint": "8.37.0",
     "eslint-config-prettier": "8.10.0",
@@ -59,6 +67,7 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-ssr-friendly": "1.2.0",
+    "eslint-plugin-storybook": "0.6.15",
     "husky": "8.0.3",
     "identity-obj-proxy": "^3.0.0",
     "is-ci": "3.0.1",
@@ -75,10 +84,12 @@
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
     "rollup-plugin-postcss": "4.0.2",
+    "storybook": "7.5.3",
     "stylelint": "15.11.0",
     "stylelint-config-standard": "34.0.0",
     "stylelint-order": "6.0.3",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "webpack": "5.89.0"
   },
   "peerDependencies": {
     "react": ">=18.2.0",
@@ -90,7 +101,6 @@
     "clean:lib": "rm -rf dist",
     "compile:lib": "rollup -c",
     "build:lib": "run-s clean:lib compile:lib",
-    "build:lib:local": "REACT_APP_PKG_MAIN=lib/index.cjs.js REACT_APP_PKG_MODULE=lib/index.esm.js REACT_APP_PKG_STYLE=lib/default.css run-s build:lib",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint:js": "eslint ./src/",
@@ -102,8 +112,8 @@
     "copy:files": "node ./copyFiles.js",
     "write:template": "node ./writeTemplateConfig.js",
     "prepublishOnly": "run-s clean:files copy:files write:template",
-    "start:docs": "start-storybook -p 6006",
-    "build:docs": "build-storybook",
+    "start:docs": "storybook dev -p 6006",
+    "build:docs": "storybook build",
     "prepare": "is-ci || husky install"
   },
   "browserslist": {
