--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,11 +12,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
     "baseUrl": "src",
-    "paths": {
-      "@/*": ["./src/*"]
-    },
     "target": "esnext",
     "declaration": false,
     "outDir": "./dist",
