--- a/package.json
+++ b/package.json
@@ -107,8 +107,8 @@
     "build:lib": "run-s clean:lib compile:lib",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint:js": "eslint ./src/",
-    "fix:js": "run-s 'lint:js --fix'",
+    "lint:code": "eslint ./src/",
+    "fix:code": "run-s 'lint:js --fix'",
     "lint:types": "tsc --pretty --noEmit",
     "lint:style": "stylelint ./src/**/*.css",
     "fix:style": "run-s 'lint:style --fix'",
