--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "engines": {
     "node": ">=14"
   },
-  "description": "Create React App template to build and publish NPM libraries with rollup, eslint and stylelint",
-  "main": "template.json",
   "keywords": [
     "react",
     "create-react-app",
@@ -23,6 +21,11 @@
     "publish",
     "create-react-library"
   ],
+  "description": "Create React App template to build and publish NPM libraries with rollup, eslint and stylelint",
+  "main": "template.json",
+  "module": "dist/index.esm.js",
+  "style": "dist/style.css",
+  "types": "dist/types.d.ts",
   "files": [
     "template",
     "template.json"
@@ -37,86 +40,85 @@
     "url": "https://github.com/morewings/cra-template-npm-library/issues"
   },
   "dependencies": {
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@babel/cli": "7.22.5",
-    "@babel/core": "7.21.4",
-    "@babel/eslint-parser": "7.21.3",
-    "@babel/preset-env": "7.21.4",
-    "@babel/preset-react": "7.18.6",
-    "@babel/runtime": "7.21.0",
-    "@rollup/plugin-babel": "6.0.3",
-    "@rollup/plugin-commonjs": "25.0.2",
-    "@rollup/plugin-node-resolve": "15.0.1",
-    "@storybook/addon-actions": "6.5.16",
-    "@storybook/addon-essentials": "6.5.16",
-    "@storybook/addon-links": "6.5.16",
-    "@storybook/builder-webpack5": "6.5.16",
-    "@storybook/manager-webpack5": "6.5.16",
-    "@storybook/node-logger": "6.5.16",
-    "@storybook/preset-create-react-app": "4.1.2",
-    "@storybook/react": "6.5.16",
+    "@rollup/plugin-typescript": "11.1.5",
+    "@storybook/addon-essentials": "7.5.3",
+    "@storybook/addon-interactions": "7.5.3",
+    "@storybook/addon-links": "7.5.3",
+    "@storybook/blocks": "7.5.3",
+    "@storybook/preset-create-react-app": "7.5.3",
+    "@storybook/react": "7.5.3",
+    "@storybook/react-webpack5": "7.5.3",
+    "@storybook/testing-library": "0.2.2",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
+    "@types/jest": "27.0.1",
+    "@types/lodash": "4.14.202",
+    "@types/node": "16.7.13",
+    "@types/react": "18.0.0",
+    "@types/react-dom": "18.0.0",
+    "@typescript-eslint/eslint-plugin": "6.13.1",
+    "@typescript-eslint/parser": "6.12.0",
+    "@yelo/rollup-node-external": "1.0.1",
     "autoprefixer": "9.8.8",
-    "babel-eslint": "10.1.0",
     "eslint": "8.37.0",
-    "eslint-config-airbnb": "19.0.4",
-    "eslint-config-prettier": "8.8.0",
-    "eslint-config-react-app": "7.0.1",
-    "eslint-plugin-flowtype": "8.0.2",
-    "eslint-plugin-fp": "2.3.0",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-config-prettier": "8.10.0",
+    "eslint-import-resolver-typescript": "3.6.1",
+    "eslint-plugin-import": "2.29.0",
     "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-ssr-friendly": "1.2.0",
+    "eslint-plugin-storybook": "0.6.15",
     "husky": "8.0.3",
+    "identity-obj-proxy": "^3.0.0",
     "is-ci": "3.0.1",
     "lint-staged": "13.2.0",
     "npm-run-all": "4.1.5",
     "postcss-preset-env": "8.3.0",
     "prettier": "2.8.7",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
     "recursive-copy": "2.0.14",
     "rimraf": "4.4.1",
-    "rollup": "2.79.1",
-    "rollup-plugin-eslint": "7.0.0",
-    "rollup-plugin-filesize": "10.0.0",
-    "rollup-plugin-includepaths": "0.2.4",
+    "rollup": "3.29.4",
+    "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
     "rollup-plugin-postcss": "4.0.2",
-    "rollup-plugin-terser": "7.0.2",
-    "stylelint": "15.10.1",
-    "stylelint-config-prettier": "9.0.5",
-    "stylelint-config-standard": "29.0.0",
-    "stylelint-order": "6.0.3"
+    "storybook": "7.5.3",
+    "stylelint": "15.11.0",
+    "stylelint-config-standard": "34.0.0",
+    "stylelint-order": "6.0.3",
+    "typescript": "4.8.4",
+    "webpack": "5.89.0"
+  },
+  "peerDependencies": {
+    "react": ">=18.2.0",
+    "react-dom": ">=18.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build:lib": "rollup -c",
-    "build:lib:local": "REACT_APP_PKG_MAIN=lib/index.cjs.js REACT_APP_PKG_MODULE=lib/index.esm.js REACT_APP_PKG_STYLE=lib/default.css run-s build:lib",
+    "clean:lib": "rm -rf dist",
+    "compile:lib": "rollup -c",
+    "build:lib": "run-s clean:lib compile:lib",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint:js": "eslint ./src/",
-    "fix:js": "run-s 'lint:js --fix'",
+    "lint:code": "eslint ./src/",
+    "fix:code": "run-s 'lint:js --fix'",
+    "lint:types": "tsc --pretty --noEmit",
     "lint:style": "stylelint ./src/**/*.css",
     "fix:style": "run-s 'lint:style --fix'",
     "clean:files": "node ./cleanFiles.js",
     "copy:files": "node ./copyFiles.js",
     "write:template": "node ./writeTemplateConfig.js",
     "prepublishOnly": "run-s clean:files copy:files write:template",
-    "start:docs": "start-storybook -p 6006",
-    "build:docs": "build-storybook",
+    "start:docs": "storybook dev -p 6006",
+    "build:docs": "storybook build",
     "prepare": "is-ci || husky install"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
