--- a/.github/workflows/pull-request-jobs.yml
+++ b/.github/workflows/pull-request-jobs.yml
@@ -16,6 +16,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
       - name: Cancel Workflow Action
         uses: styfle/cancel-workflow-action@0.10.1
         with:
@@ -27,13 +30,13 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ steps.nvm.outputs.NVMRC }}
-          cache: 'yarn'
-      - name: Run yarn tasks
+          cache: 'pnpm'
+      - name: Run tasks
         run: |
-          yarn install --frozen-lockfile
-          yarn lint:js --quiet
-          yarn lint:style --quiet
-          yarn test --silent
-          yarn start --smoke-test
-          yarn start:docs --smoke-test --quiet
-          yarn build:lib:local --silent
+          pnpm install
+          pnpm run lint:code --quiet
+          pnpm run lint:style --quiet
+          pnpm run test --silent
+          pnpm run start --smoke-test
+          pnpm run start:docs --smoke-test --quiet
+          pnpm run build:lib
