--- a/.github/workflows/merge-jobs.yml
+++ b/.github/workflows/merge-jobs.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           node-version: ${{ steps.nvm.outputs.NVMRC }}
           cache: 'pnpm'
-      - name: Run yarn tasks
+      - name: Run merge tasks
         run: |
           pnpm install
       - name: Publish NPM package
