--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -30,7 +30,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Checkout
+      - name: Install pnpm
         uses: pnpm/action-setup@v2
         with:
           version: 8
@@ -42,7 +42,7 @@ jobs:
         with:
           node-version: ${{ steps.nvm.outputs.NVMRC }}
           cache: 'pnpm'
-      - name: Run yarn tasks
+      - name: Run deploy tasks
         run: |
           pnpm install
           pnpm run build:docs --quiet
